# kaspa-wallet

./: Cargo.toml  README.md  check
.github/workflows/: ci.yaml  deploy.yaml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/utxo/: mod.rs
