[workspace]
resolver = "2"
members = [
    "cli",
    "macros",
    "core",
]

[workspace.package]
rust-version = "1.80.0"
version = "0.14.1"
authors = ["Kaspa developers"]
license = "ISC"
repository = "https://github.com/aspectron/kaspa-wallet"
edition = "2021"
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "src/**/*.r",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[workspace.dependencies]
kaspa-wallet = { version = "0.14.1", path = "cli" }
kaspa-wallet-core = { version = "0.14.1", path = "core" }
kaspa-wallet-macros = { version = "0.14.1", path = "macros" }


kaspa-addresses = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-bip32 = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-consensus = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-consensus-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-consensus-client = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-consensus-notify = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-consensus-wasm = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-daemon = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-hashes = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-metrics-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-notify = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-pow = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-rpc-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-rpc-macros = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-rpc-service = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-txscript = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-txscript-errors = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-utils = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-utxoindex = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-wallet-keys = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-wasm-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-wrpc-client = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }
kaspa-wrpc-wasm = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "omega" }

sparkle-core = { git = "https://github.com/aspectron/sparkle.git", branch = "omega" }

# external
aes = "0.8.3"
ahash = "0.8.6"
argon2 = "0.5.2"
async-channel = "2.0.0"
async-std = { version = "1.12.0", features = ['attributes'] }
async-trait = "0.1.74"
base64 = "0.21.5"
borsh = { version = "1.5.1", features = ["derive", "rc"] }
bs58 = { version = "0.5.0", features = ["check"], default-features = false }
cfb-mode = "0.8.2"
cfg-if = "1.0.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4.7", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
ctrlc = "3.4.1"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
dashmap = "5.5.3"
derivative = "2.2.0"
derive_builder = "0.20.0"
derive_more = "0.99.17"
downcast = "0.11.0"
downcast-rs = "1.2.0"
duration-string = "0.3.0"
enum-primitive-derive = "0.2.2"
evpkdf = "0.2.0"
faster-hex = "0.6.1" # TODO "0.8.1" - fails unit tests
fixedstr = { version = "0.5.4", features = ["serde"] }
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.10", features = ["js"] }
heapless = "0.7.16"
hex-literal = "0.4.1"
hmac = { version = "0.12.1", default-features = false }
home = "0.5.5"
itertools = "0.11.0"
js-sys = "0.3.67"
md-5 = "0.10.6"
pad = "0.1.6"
pbkdf2 = "0.12.2"
rand = "0.8.5"
regex = "1.10.2"
ripemd = { version = "0.1.3", default-features = false }
secp256k1 = { version = "0.28.2", features = ["global-context","rand-std","serde"] } # TODO "0.28.0"
separator = "0.4.1"
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde_repr = "0.1.18"
serde-value = "0.7.0"
serde-wasm-bindgen = "0.6.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
slugify-rs = "0.0.3"
smallvec = { version = "1.11.1", features = ["serde"] }
sorted-insert = "0.2.3"
tempfile = "3.8.1"
textwrap = "0.16.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread"] }
toml = "0.8.8"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.37"
web-sys = "0.3.67"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
chrono = "0.4.31"
indexed_db_futures = "0.4.1"


# workflow dependencies that are not a part of core libraries

# workflow-perf-monitor = { path = "../../../workflow-perf-monitor-rs" }
workflow-perf-monitor = "0.0.2"
nw-sys = "0.1.6"

# workflow dependencies
workflow-core = { version = "0.15.0" }
workflow-d3 = { version = "0.15.0" }
workflow-dom = { version = "0.15.0" }
workflow-http = { version = "0.15.0" }
workflow-log = { version = "0.15.0" }
workflow-node = { version = "0.15.0" }
workflow-nw = { version = "0.15.0" }
workflow-rpc = { version = "0.15.0" }
workflow-serializer = { version = "0.15.0" }
workflow-store = { version = "0.15.0" }
workflow-terminal = { version = "0.15.0" }
workflow-wasm = { version = "0.15.0" }

# if below is enabled, this means that there is an ongoing work
# on the workflow-rs crate. This requires that you clone workflow-rs
# into a sibling folder from https://github.com/workflow-rs/workflow-rs
# workflow-core = { path = "../workflow-rs/core" }
# workflow-d3 = { path = "../workflow-rs/d3" }
# workflow-dom = { path = "../workflow-rs/dom" }
# workflow-http = { path = "../workflow-rs/http" }
# workflow-log = { path = "../workflow-rs/log" }
# workflow-node = { path = "../workflow-rs/node" }
# workflow-nw = { path = "../workflow-rs/nw" }
# workflow-rpc = { path = "../workflow-rs/rpc" }
# workflow-serializer = { path = "../workflow-rs/serializer" }
# workflow-store = { path = "../workflow-rs/store" }
# workflow-terminal = { path = "../workflow-rs/terminal" }
# workflow-wasm = { path = "../workflow-rs/wasm" }

# ---
# workflow-core = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-d3 = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-dom = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-http = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-log = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-node = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-nw = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-rpc = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-serializer = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-store = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-terminal = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-wasm = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# https://github.com/aspectron/nw-sys
# nw-sys = { path = "../nw-sys" }

[profile.release]
lto = "thin"
strip = true
overflow-checks = true

[profile.heap]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
empty_docs = "allow"
